# estampes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
doc/: Makefile  ballast_guide.adoc  bars_guide.adoc  data_format.adoc  dfmt_data.adoc  dfmt_qlab.adoc  esparser_guide.adoc  estampes.adoc  estampes_api.adoc  estampes_lib.adoc  estampes_units.adoc  jbldoc.css  prog_ballast.adoc  prog_bars.adoc  prog_esparser.adoc  readme.adoc  readme.html
doc/api/: dfmt_data.adoc  dfmt_qlabel.adoc  dfmt_qlabel_fields.adoc
doc/base/: note_symbols.adoc  note_units.adoc
doc/lib/: unit_basic.adoc  unit_quantity.adoc  unit_spectro.adoc
doc/source/: conf.py  estampes.rst  index.rst
docs/: Makefile  prog_deriveur.adoc  readme.adoc
docs/api/: dfmt_qdata.adoc  dfmt_qdata_fields.adoc  dfmt_qlabel_fields.adoc
docs/source/: conf.py  estampes.rst
estampes/base/: __init__.py  aliases.py  errors.py  qdata.py  qlabel.py  spectro.py  spectrum.py  types.py
estampes/data/: __init__.py  atom.py  colors.py  physics.py  property.py  rgb.py  visual.py
estampes/parser/: __init__.py  base.py  csv.py  functions.py  xyz.py
estampes/parser/gaussian/: __init__.py  fchk.py  glog.py
estampes/parser/gaussian/glog/: __init__.py  extractor.py  logkeys.py  parse_prp.py  parse_qty.py  search_keys.py  seeker.py
estampes/tools/: __init__.py  anharm.py  atom.py  char.py  comp.py  math.py  mol.py  spec.py  vib.py
estampes/visual/: __init__.py  molui.py  molview.py  plotmat.py  plotspec.py  povrender.py  vibview.py
progs/: ballast.py  bars.py  corsairs.py  esparser.py  mirage.py  soar.py
scripts/: toxy.py
src/estampes/_progs/: ballast.py  bars.py  corsairs.py  deriveur.py  mirage.py  soar.py
src/estampes/base/: __init__.py  aliases.py  errors.py  qdata.py  qlabel.py  spectro.py  spectrum.py  types.py  types_base.py  types_npt.py
src/estampes/data/: atom.py  colors.py  property.py  visual.py
src/estampes/data/3d_models/: vib2cols.mtl
src/estampes/extras/: derive_core.py  derive_diff.py  derive_shift.py
src/estampes/parser/: __init__.py  base.py  csv.py  functions.py  xyz.py
src/estampes/parser/gaussian/: __init__.py  fchk.py
src/estampes/parser/gaussian/glog/: __init__.py  extractor.py  logkeys.py  parse_prp.py  parse_qty.py  search_keys.py  seeker.py  types.py
src/estampes/tools/: anharm.py  atom.py  char.py  comp.py  math.py  mol.py  output.py  spec.py  vib.py
src/estampes/visual/: molui.py  molview.py  povrender.py  vibview.py
