[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.package-data]
# "visual.objs" = ["*.obj", "*.mtl"]

[project]
name = "estampes"
version = "0.7.0"
requires-python = ">= 3.10"
authors = [
    {name = "Julien Bloino", email = "julien.bloino@gmail.com"}
]
description = "A simple API to parse and process data for computational spectroscopy"
readme = "README.md"
license = "MIT"
keywords = ["Spectroscopy", "Computational Chemistry", "Visualization"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Visualization'
]

[project.optional-dependencies]
base = ["numpy", "matplotlib"]
docs = ["sphinx", "sphinx_rtd_theme"]
gui = ["pyside6"]
full = ["estampes[base,gui,docs]"]

[project.scripts]
esballast = "estampes._progs.ballast:main"
esbars = "estampes._progs.bars:main"
escorsairs = "estampes._progs.corsairs:main"
esderiveur = "estampes._progs.deriveur:main"
esllama = "estampes._progs.llama:main"
esmirage = "estampes._progs.mirage:main"
esparser = "estampes._progs.esparser:main"
essoar = "estampes._progs.soar:main"
estoxy = "estampes._scripts.toxy:main"

[project.gui-scripts]
escapt = "estampes._progs.capt:main"
